actix-web-codegen/tests/trybuild/route-missing-method-fail.stderr
error: The #[route(..)] macro requires at least one `method` attribute
 --> tests/trybuild/route-missing-method-fail.rs:3:1
  |
3 | #[route("/")]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `route` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn() -> impl std::future::Future<Output = String> {index}: HttpServiceFactory` is not satisfied
  --> tests/trybuild/route-missing-method-fail.rs:12:55
   |
12 |     let srv = actix_test::start(|| App::new().service(index));
   |                                               ------- ^^^^^ the trait `HttpServiceFactory` is not implemented for fn item `fn() -> impl std::future::Future<Output = String> {index}`
   |                                               |
   |                                               required by a bound introduced by this call
   |
   = help: the following other types implement trait `HttpServiceFactory`:
             Resource<T>
             actix_web::Scope<T>
             Vec<T>
             Redirect
             (A,)
             (A, B)
             (A, B, C)
             (A, B, C, D)
           and $N others
note: required by a bound in `App::<T>::service`
  --> $WORKSPACE/actix-web/src/app.rs
   |
   |     pub fn service<F>(mut self, factory: F) -> Self
   |            ------- required by a bound in this associated function
   |     where
   |         F: HttpServiceFactory + 'static,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `App::<T>::service`
